--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
